--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,8 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,java
 
 .metadata
+.project
+org.eclipse.jdt.core.prefs
+.classpath
+
+
