--- a/java/springBootProjects/HopperReceipt/pom.xml
+++ b/java/springBootProjects/HopperReceipt/pom.xml
@@ -8,12 +8,12 @@
 		<version>2.6.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.griffith.firstproject</groupId>
-	<artifactId>firstproject</artifactId>
+	<groupId>com.griffith.HopperReceipt</groupId>
+	<artifactId>HopperReceipt</artifactId>
 	<version>0.0.1</version>
 	<packaging>war</packaging>
-	<name>firstproject</name>
-	<description>First Spring Boot Project</description>
+	<name>HopperReceipt</name>
+	<description>Hopper&apos;s Receipt</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -25,6 +25,12 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -34,13 +40,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-                <groupId>org.apache.tomcat.embed</groupId>
-                <artifactId>tomcat-embed-jasper</artifactId>
-        </dependency>
-        <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>jstl</artifactId>
-        </dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
