--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse,maven,windows,visualstudiocode
+
+other
