--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse,maven,windows,visualstudiocode
 
 other
+beltexam
